# tyke

./: .gitignore  .gitmodules  LICENSE  README.md  stack.yaml  tyke.cabal
data/pipelines/: 3d.json  hello.json
imgui/: LICENSE  README.md  imgui.cabal
imgui/linuxdeps/: build.sh
imgui/src/: ImGui.c  ImGui.hs  cimgui_openglrender.c  cimgui_openglrender.h  cimgui_openglrender.inl
pipelines/: 3d.lc  build.sh  hello.lc
src/: Framework.hs  Game.hs  GameLoop.hs  Main.hs  Terrain.hs  Window.hs
src/Game/: .Simulation.hs.swp  .Terrain.hs.swp  Data.hs  Rendering.hs  Simulation.hs  Terrain.hs
src/Game/Simulation/: Input.hs
src/Game/Simulation/Camera/: Camera.hs  FPSCamera.hs  IsometricCamera.hs  MixedCamera.hs
src/Game/Terrain/: Data.hs  Generation.hs  Rendering.hs
src/Terrain/: Data.hs  Rendering.hs
windeps/include/SDL2/: SDL_config.h
windeps/lib/: ftgl.lib
