name:                tyke
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/Catchouli/tyke#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Caitlin Wilks
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable tyke
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O2
                       -threaded
  build-depends:       base >= 4.7 && < 5
                     , sdl2
                     , linear
                     , vector
                     , bytestring
                     , OpenGL
                     , text
                     , reactive-banana
                     , time
                     , lambdacube-gl
                     , lambdacube-ir
                     , JuicyPixels
                     , directory
                     , containers
                     , aeson
                     , random
                     , array
                     , safecopy
                     , cereal
