name:                tyke
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/Catchouli/tyke#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Caitlin Wilks
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable tyke
  hs-source-dirs:      src
  main-is:             Main.hs
  if os(windows)
    extra-lib-dirs:    windeps/lib
    include-dirs:      windeps/include
  default-language:    Haskell2010
  ghc-options:         -O2
                       -threaded
                       -pgmlg++
  other-modules:       Framework
                     , Game
                     , Game.Data
                     , Game.Rendering
                     , Game.Simulation
                     , Game.Simulation.Camera.FPSCamera
                     , Game.Simulation.Camera.IsometricCamera
                     , Game.Simulation.Input
                     , Game.Terrain
                     , Game.Terrain.Data
                     , Game.Terrain.Rendering
                     , Window
  build-depends:       base >= 4.7 && < 5
                     -- System
                     , random
                     , time
                     , directory
                     , sdl2
                     -- Maths
                     , linear
                     -- Text
                     , bytestring
                     , text
                     -- Graphics
                     , OpenGL
                     , OpenGLRaw
                     , reactive-banana
                     , lambdacube-gl
                     , lambdacube-ir
                     , FTGL
                     -- File loading
                     , JuicyPixels
                     , aeson
                     -- Storage
                     , array
                     , vector
                     , containers
                     , safecopy
                     , cereal
                     , lens
                     , imgui
