name:                imgui
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Catchouli/imgui#readme
license:             BSD3
license-file:        LICENSE
author:              Caitlin Wilks
maintainer:          mitasuki@gmail.com
copyright:           Caitlin Wilks 2017
category:            unknown
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  extra-libraries:     stdc++
  exposed-modules:     ImGui
  c-sources:           ../cimgui/imgui/imgui.cpp
                     , ../cimgui/imgui/imgui_draw.cpp
                     , ../cimgui/imgui/imgui_demo.cpp
                     , ../cimgui/cimgui/cimgui.cpp
                     , ../cimgui/cimgui/drawList.cpp
                     , ../cimgui/cimgui/fontAtlas.cpp
                     , src/ImGui.c
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , inline-c
